@@ -1,7 +1,0 @@
-/* eslint-disable max-len */
-const googlePayImage =
-	"data:image/svg+xml,%3Csvg width='343' height='50' viewBox='0 0 343 50' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='343' height='50' rx='8' fill='black'/%3E%3Cpath d='M94.9511 24.6726V31.7486H92.6902V14.2749H98.6838C100.203 14.2749 101.498 14.7778 102.558 15.7837C103.641 16.7895 104.183 18.0176 104.183 19.4679C104.183 20.9533 103.641 22.1813 102.558 23.1755C101.51 24.1696 100.215 24.6609 98.6838 24.6609H94.9511V24.6726ZM94.9511 16.4269V22.5205H98.7309C99.6258 22.5205 100.379 22.2164 100.968 21.6199C101.569 21.0234 101.875 20.2983 101.875 19.4796C101.875 18.6726 101.569 17.9591 100.968 17.3626C100.379 16.7427 99.6375 16.4386 98.7309 16.4386H94.9511V16.4269Z' fill='white'/%3E%3Cpath d='M110.094 19.3977C111.766 19.3977 113.085 19.8421 114.05 20.731C115.016 21.6199 115.499 22.8363 115.499 24.3802V31.7486H113.344V30.0878H113.25C112.319 31.4562 111.071 32.1345 109.517 32.1345C108.186 32.1345 107.079 31.7486 106.185 30.9649C105.29 30.1813 104.842 29.2106 104.842 28.041C104.842 26.8012 105.313 25.8188 106.255 25.0936C107.197 24.3568 108.457 23.9942 110.023 23.9942C111.366 23.9942 112.472 24.2398 113.332 24.731V24.2164C113.332 23.4328 113.026 22.7778 112.402 22.2281C111.778 21.6784 111.048 21.4094 110.212 21.4094C108.952 21.4094 107.951 21.9357 107.221 23L105.231 21.7603C106.326 20.1813 107.951 19.3977 110.094 19.3977ZM107.174 28.0761C107.174 28.6609 107.421 29.1521 107.927 29.538C108.422 29.924 109.011 30.1228 109.682 30.1228C110.636 30.1228 111.483 29.772 112.225 29.0702C112.967 28.3685 113.344 27.5497 113.344 26.6024C112.637 26.0527 111.66 25.772 110.4 25.772C109.482 25.772 108.716 25.9942 108.104 26.4269C107.48 26.8831 107.174 27.4328 107.174 28.0761Z' fill='white'/%3E%3Cpath d='M127.792 19.7837L120.256 37.0001H117.924L120.727 30.9767L115.758 19.7837H118.219L121.798 28.3685H121.845L125.331 19.7837H127.792Z' fill='white'/%3E%3Cpath d='M85.9586 23.2456C85.9586 22.5134 85.8926 21.8128 85.7702 21.1392H76.2936V24.9988L81.7513 25C81.53 26.2842 80.8176 27.3789 79.726 28.1087V30.6128H82.9748C84.8717 28.869 85.9586 26.2912 85.9586 23.2456Z' fill='%234285F4'/%3E%3Cpath d='M79.7272 28.1088C78.8229 28.7146 77.6583 29.069 76.2959 29.069C73.6642 29.069 71.4317 27.3076 70.6321 24.9333H67.2809V27.5158C68.9412 30.7883 72.3536 33.0339 76.2959 33.0339C79.0207 33.0339 81.3098 32.1439 82.9759 30.6117L79.7272 28.1088Z' fill='%2334A853'/%3E%3Cpath d='M70.3165 23.0176C70.3165 22.3509 70.4284 21.7065 70.6321 21.1006V18.5182H67.2809C66.5944 19.8714 66.2082 21.3989 66.2082 23.0176C66.2082 24.6363 66.5956 26.1638 67.2809 27.517L70.6321 24.9346C70.4284 24.3287 70.3165 23.6843 70.3165 23.0176Z' fill='%23FABB05'/%3E%3Cpath d='M76.2959 16.9649C77.7831 16.9649 79.1149 17.4737 80.1664 18.4678L83.0454 15.6105C81.2968 13.993 79.0172 13 76.2959 13C72.3548 13 68.9412 15.2456 67.2809 18.5181L70.6321 21.1006C71.4317 18.7263 73.6642 16.9649 76.2959 16.9649Z' fill='%23E94235'/%3E%3Cline x1='140.792' y1='12' x2='140.792' y2='38' stroke='%235F6368' stroke-width='2'/%3E%3Crect x='151.292' y='11.962' width='41' height='26' stroke='white'/%3E%3Cpath d='M187.766 23.7321C187.733 22.9139 187.369 22.1408 186.752 21.5792C186.135 21.0176 185.315 20.7123 184.467 20.7289C183.454 20.6861 182.434 20.7289 181.421 20.6984C181.149 20.6984 181.054 20.7779 181.01 21.0409C180.661 23.255 180.288 25.4631 179.92 27.6772C179.832 28.2154 179.749 28.7537 179.661 29.3042C179.721 29.3178 179.783 29.328 179.844 29.3347C180.87 29.3347 181.896 29.3347 182.916 29.3347C183.738 29.3504 184.55 29.1576 185.271 28.7756C185.992 28.3935 186.597 27.8355 187.025 27.1573C187.657 26.1261 187.918 24.9216 187.766 23.7321ZM184.98 26.405C184.783 26.8111 184.465 27.1511 184.067 27.3811C183.669 27.6111 183.208 27.7206 182.745 27.6955H182.111C182.219 27.0289 182.314 26.3989 182.422 25.7689C182.593 24.723 182.776 23.6709 182.941 22.6189C182.941 22.4171 183.036 22.3314 183.251 22.3498C183.365 22.359 183.479 22.359 183.593 22.3498C183.815 22.3177 184.042 22.3315 184.258 22.3903C184.475 22.4491 184.676 22.5515 184.848 22.6908C185.02 22.8301 185.16 23.0031 185.258 23.1984C185.356 23.3937 185.41 23.6069 185.417 23.8239C185.573 24.7059 185.424 25.6131 184.993 26.405' fill='white'/%3E%3Cpath d='M178.268 21.1081C177.831 20.9036 177.358 20.7831 176.874 20.7534C175.855 20.6922 174.829 20.7534 173.803 20.7106C173.537 20.7106 173.474 20.8084 173.442 21.0286C173.084 23.255 172.718 25.4793 172.347 27.7016C172.258 28.2338 172.176 28.772 172.081 29.3469C172.714 29.3469 173.347 29.3469 173.981 29.3469C174.215 29.3469 174.297 29.2674 174.329 29.0472C174.449 28.2338 174.601 27.4203 174.721 26.6007C174.721 26.405 174.829 26.3193 175.038 26.3438C175.12 26.3561 175.203 26.3561 175.285 26.3438C175.507 26.3438 175.595 26.3988 175.633 26.6129C175.722 27.1145 175.83 27.6099 175.95 28.1053C175.998 28.4255 176.15 28.7226 176.385 28.9535C176.619 29.1844 176.924 29.3372 177.254 29.3898C177.767 29.4233 178.282 29.411 178.793 29.3531C178.829 29.3432 178.861 29.3245 178.887 29.2987C178.912 29.2729 178.93 29.241 178.939 29.2063C178.977 28.772 178.996 28.3377 179.021 27.8912H178.704C178.598 27.9031 178.491 27.8944 178.388 27.8656C178.285 27.8368 178.19 27.7886 178.107 27.7236C178.023 27.6587 177.955 27.5784 177.904 27.4875C177.853 27.3965 177.822 27.2968 177.812 27.194C177.717 26.8453 177.66 26.4906 177.546 26.1481C177.476 25.9279 177.546 25.83 177.736 25.7199C178.164 25.4948 178.532 25.1773 178.812 24.7922C179.092 24.4071 179.276 23.9648 179.35 23.4997C179.521 22.4232 179.16 21.5241 178.293 21.1265L178.268 21.1081ZM176.817 24.2826C176.745 24.4438 176.621 24.5784 176.464 24.6665C176.307 24.7546 176.124 24.7915 175.944 24.7719C175.64 24.7564 175.336 24.7564 175.032 24.7719C175.158 24.0073 175.266 23.3039 175.393 22.6005C175.408 22.5626 175.431 22.5285 175.462 22.501C175.493 22.4734 175.53 22.453 175.57 22.4415C175.827 22.4171 176.086 22.4171 176.343 22.4415C176.529 22.4659 176.7 22.5528 176.826 22.687C176.952 22.8213 177.026 22.9943 177.033 23.1755C177.084 23.5543 176.999 23.9388 176.792 24.2642' fill='white'/%3E%3Cpath d='M171.061 27.2062C170.625 25.1266 170.188 23.0532 169.757 20.9675C169.713 20.7779 169.637 20.7106 169.428 20.7106C168.953 20.7106 168.478 20.7106 168.003 20.7106C167.907 20.6989 167.811 20.7184 167.728 20.7661C167.645 20.8138 167.582 20.8868 167.547 20.9736C166.724 22.5088 165.894 24.0318 165.071 25.567C165.027 25.6588 164.976 25.7444 164.925 25.8361L163.216 29.0106C163.165 29.1023 163.127 29.2002 163.057 29.347C163.811 29.347 164.514 29.347 165.21 29.347C165.286 29.347 165.381 29.243 165.419 29.1635C165.66 28.7047 165.894 28.2399 166.116 27.7628C166.143 27.6883 166.195 27.6247 166.264 27.5825C166.333 27.5402 166.415 27.5219 166.496 27.5304C167.205 27.5304 167.921 27.5304 168.636 27.5304C168.851 27.5304 168.921 27.6038 168.953 27.7934C169.016 28.2277 169.086 28.6619 169.174 29.0901C169.174 29.1879 169.288 29.347 169.358 29.347C170.055 29.347 170.757 29.347 171.498 29.347C171.498 29.194 171.46 29.0778 171.435 28.9616C171.315 28.35 171.188 27.7934 171.061 27.2062ZM167.047 25.8973C167.427 25.1266 167.794 24.3927 168.161 23.6587H168.25C168.37 24.3927 168.497 25.1266 168.624 25.8973H167.047Z' fill='white'/%3E%3Cpath d='M161.101 27.6712C160.883 27.7345 160.653 27.7492 160.428 27.7139C160.203 27.6787 159.99 27.5946 159.804 27.4679C159.618 27.3412 159.464 27.1752 159.354 26.9826C159.244 26.79 159.181 26.5758 159.169 26.3561C159.021 25.4427 159.16 24.5072 159.568 23.671C159.728 23.2847 160.004 22.9537 160.361 22.7213C160.718 22.4888 161.139 22.3658 161.569 22.3682H161.835C162.304 22.4049 162.773 22.4844 163.273 22.5517C163.45 22.0502 163.64 21.5303 163.83 21.0043C163.694 20.8051 163.504 20.6456 163.281 20.5432C163.057 20.4408 162.809 20.3993 162.564 20.4232H157.65L157.599 20.6495C158.2 20.8013 158.79 20.9913 159.366 21.2183C158.824 21.5117 158.349 21.9093 157.973 22.3866C157.03 23.6171 156.604 25.1469 156.782 26.6681C156.804 27.2214 156.996 27.7558 157.335 28.2026C157.673 28.6495 158.142 28.9884 158.682 29.1758C159.322 29.4124 160.008 29.5146 160.692 29.4756C161.377 29.4365 162.045 29.2572 162.652 28.9495C162.722 28.9128 162.817 28.821 162.811 28.7599C162.754 28.2706 162.678 27.7874 162.614 27.3286C162.089 27.451 161.614 27.5855 161.126 27.6712' fill='white'/%3E%3Cpath d='M203.482 28.956C203.17 28.956 202.876 28.896 202.6 28.776C202.336 28.656 202.102 28.494 201.898 28.29C201.694 28.086 201.532 27.852 201.412 27.588C201.292 27.312 201.232 27.018 201.232 26.706C201.232 26.394 201.292 26.106 201.412 25.842C201.532 25.566 201.694 25.326 201.898 25.122C202.102 24.918 202.336 24.756 202.6 24.636C202.876 24.516 203.17 24.456 203.482 24.456C203.794 24.456 204.088 24.516 204.364 24.636C204.64 24.756 204.88 24.918 205.084 25.122C205.288 25.326 205.45 25.566 205.57 25.842C205.69 26.106 205.75 26.394 205.75 26.706C205.75 27.018 205.69 27.312 205.57 27.588C205.45 27.852 205.288 28.086 205.084 28.29C204.88 28.494 204.64 28.656 204.364 28.776C204.088 28.896 203.794 28.956 203.482 28.956ZM210.882 28.956C210.57 28.956 210.276 28.896 210 28.776C209.736 28.656 209.502 28.494 209.298 28.29C209.094 28.086 208.932 27.852 208.812 27.588C208.692 27.312 208.632 27.018 208.632 26.706C208.632 26.394 208.692 26.106 208.812 25.842C208.932 25.566 209.094 25.326 209.298 25.122C209.502 24.918 209.736 24.756 210 24.636C210.276 24.516 210.57 24.456 210.882 24.456C211.194 24.456 211.488 24.516 211.764 24.636C212.04 24.756 212.28 24.918 212.484 25.122C212.688 25.326 212.85 25.566 212.97 25.842C213.09 26.106 213.15 26.394 213.15 26.706C213.15 27.018 213.09 27.312 212.97 27.588C212.85 27.852 212.688 28.086 212.484 28.29C212.28 28.494 212.04 28.656 211.764 28.776C211.488 28.896 211.194 28.956 210.882 28.956ZM218.283 28.956C217.971 28.956 217.677 28.896 217.401 28.776C217.137 28.656 216.903 28.494 216.699 28.29C216.495 28.086 216.333 27.852 216.213 27.588C216.093 27.312 216.033 27.018 216.033 26.706C216.033 26.394 216.093 26.106 216.213 25.842C216.333 25.566 216.495 25.326 216.699 25.122C216.903 24.918 217.137 24.756 217.401 24.636C217.677 24.516 217.971 24.456 218.283 24.456C218.595 24.456 218.889 24.516 219.165 24.636C219.441 24.756 219.681 24.918 219.885 25.122C220.089 25.326 220.251 25.566 220.371 25.842C220.491 26.106 220.551 26.394 220.551 26.706C220.551 27.018 220.491 27.312 220.371 27.588C220.251 27.852 220.089 28.086 219.885 28.29C219.681 28.494 219.441 28.656 219.165 28.776C218.889 28.896 218.595 28.956 218.283 28.956ZM225.683 28.956C225.371 28.956 225.077 28.896 224.801 28.776C224.537 28.656 224.303 28.494 224.099 28.29C223.895 28.086 223.733 27.852 223.613 27.588C223.493 27.312 223.433 27.018 223.433 26.706C223.433 26.394 223.493 26.106 223.613 25.842C223.733 25.566 223.895 25.326 224.099 25.122C224.303 24.918 224.537 24.756 224.801 24.636C225.077 24.516 225.371 24.456 225.683 24.456C225.995 24.456 226.289 24.516 226.565 24.636C226.841 24.756 227.081 24.918 227.285 25.122C227.489 25.326 227.651 25.566 227.771 25.842C227.891 26.106 227.951 26.394 227.951 26.706C227.951 27.018 227.891 27.312 227.771 27.588C227.651 27.852 227.489 28.086 227.285 28.29C227.081 28.494 226.841 28.656 226.565 28.776C226.289 28.896 225.995 28.956 225.683 28.956ZM235.566 31.908L240.984 22.188L240.948 22.116H235.008L235.044 20.226H243.18V22.224L237.294 32.826L235.566 31.908ZM249.263 32.826C248.831 32.826 248.399 32.766 247.967 32.646C247.535 32.526 247.127 32.34 246.743 32.088C246.371 31.824 246.035 31.494 245.735 31.098C245.435 30.702 245.207 30.228 245.051 29.676L246.923 28.902C247.091 29.55 247.379 30.048 247.787 30.396C248.195 30.744 248.687 30.918 249.263 30.918C249.551 30.918 249.827 30.87 250.091 30.774C250.367 30.678 250.607 30.546 250.811 30.378C251.015 30.198 251.177 29.994 251.297 29.766C251.417 29.526 251.477 29.262 251.477 28.974C251.477 28.686 251.411 28.422 251.279 28.182C251.159 27.942 250.991 27.738 250.775 27.57C250.559 27.402 250.301 27.27 250.001 27.174C249.713 27.078 249.401 27.03 249.065 27.03H248.003V25.176H248.957C249.245 25.176 249.509 25.14 249.749 25.068C250.001 24.984 250.223 24.87 250.415 24.726C250.607 24.582 250.757 24.402 250.865 24.186C250.973 23.958 251.027 23.7 251.027 23.412C251.027 22.92 250.847 22.536 250.487 22.26C250.139 21.972 249.695 21.828 249.155 21.828C248.855 21.828 248.591 21.87 248.363 21.954C248.147 22.038 247.961 22.152 247.805 22.296C247.649 22.44 247.517 22.602 247.409 22.782C247.313 22.95 247.235 23.124 247.175 23.304L245.339 22.53C245.435 22.242 245.585 21.948 245.789 21.648C245.993 21.336 246.251 21.054 246.563 20.802C246.875 20.55 247.241 20.346 247.661 20.19C248.093 20.022 248.591 19.938 249.155 19.938C249.731 19.938 250.259 20.022 250.739 20.19C251.219 20.358 251.633 20.592 251.981 20.892C252.329 21.192 252.599 21.546 252.791 21.954C252.983 22.362 253.079 22.806 253.079 23.286C253.079 23.634 253.031 23.952 252.935 24.24C252.851 24.528 252.731 24.786 252.575 25.014C252.419 25.23 252.245 25.416 252.053 25.572C251.861 25.728 251.663 25.86 251.459 25.968V26.076C251.735 26.196 251.999 26.352 252.251 26.544C252.503 26.724 252.719 26.94 252.899 27.192C253.091 27.444 253.241 27.732 253.349 28.056C253.457 28.368 253.511 28.71 253.511 29.082C253.511 29.622 253.403 30.126 253.187 30.594C252.971 31.05 252.671 31.446 252.287 31.782C251.915 32.106 251.471 32.358 250.955 32.538C250.439 32.73 249.875 32.826 249.263 32.826ZM261.209 32.538V30.108H255.449V28.524L261.047 20.226H263.225V28.236H264.773V30.108H263.225V32.538H261.209ZM261.209 23.196H261.101L257.699 28.236H261.209V23.196ZM271.097 32.826C270.473 32.826 269.897 32.73 269.369 32.538C268.841 32.346 268.385 32.088 268.001 31.764C267.617 31.428 267.317 31.038 267.101 30.594C266.885 30.138 266.777 29.646 266.777 29.118C266.777 28.758 266.825 28.428 266.921 28.128C267.029 27.816 267.173 27.534 267.353 27.282C267.533 27.03 267.737 26.808 267.965 26.616C268.205 26.412 268.457 26.244 268.721 26.112V26.004C268.301 25.728 267.941 25.368 267.641 24.924C267.341 24.48 267.191 23.976 267.191 23.412C267.191 22.92 267.287 22.464 267.479 22.044C267.671 21.612 267.941 21.24 268.289 20.928C268.637 20.616 269.051 20.376 269.531 20.208C270.011 20.028 270.533 19.938 271.097 19.938C271.661 19.938 272.183 20.028 272.663 20.208C273.143 20.376 273.557 20.616 273.905 20.928C274.253 21.24 274.523 21.612 274.715 22.044C274.907 22.464 275.003 22.92 275.003 23.412C275.003 23.976 274.853 24.48 274.553 24.924C274.253 25.368 273.893 25.728 273.473 26.004V26.112C273.737 26.244 273.983 26.412 274.211 26.616C274.451 26.808 274.661 27.03 274.841 27.282C275.021 27.534 275.159 27.816 275.255 28.128C275.363 28.428 275.417 28.758 275.417 29.118C275.417 29.646 275.309 30.138 275.093 30.594C274.877 31.038 274.577 31.428 274.193 31.764C273.809 32.088 273.353 32.346 272.825 32.538C272.297 32.73 271.721 32.826 271.097 32.826ZM271.097 25.212C271.637 25.212 272.087 25.062 272.447 24.762C272.819 24.45 273.005 24.03 273.005 23.502C273.005 22.962 272.819 22.542 272.447 22.242C272.087 21.942 271.637 21.792 271.097 21.792C270.557 21.792 270.101 21.942 269.729 22.242C269.369 22.542 269.189 22.962 269.189 23.502C269.189 24.03 269.369 24.45 269.729 24.762C270.101 25.062 270.557 25.212 271.097 25.212ZM271.097 30.936C271.421 30.936 271.721 30.888 271.997 30.792C272.273 30.696 272.513 30.564 272.717 30.396C272.933 30.228 273.095 30.024 273.203 29.784C273.323 29.532 273.383 29.262 273.383 28.974C273.383 28.686 273.323 28.422 273.203 28.182C273.083 27.93 272.921 27.72 272.717 27.552C272.513 27.384 272.273 27.252 271.997 27.156C271.721 27.06 271.421 27.012 271.097 27.012C270.773 27.012 270.473 27.06 270.197 27.156C269.921 27.252 269.681 27.384 269.477 27.552C269.273 27.72 269.111 27.93 268.991 28.182C268.871 28.422 268.811 28.686 268.811 28.974C268.811 29.262 268.865 29.532 268.973 29.784C269.093 30.024 269.255 30.228 269.459 30.396C269.675 30.564 269.921 30.696 270.197 30.792C270.473 30.888 270.773 30.936 271.097 30.936Z' fill='white'/%3E%3C/svg%3E%0A";
-
-const GooglePayPreview = () => <img src={ googlePayImage } alt="" />;
-
-export default GooglePayPreview;
