@@ -1,11 +1,0 @@
-/* eslint-disable max-len */
-import icon from './icon.svg';
-import './style.scss';
-
-const useStripeLinkPreview = () => (
-	<div className="stripe-link-preview">
-		<img src={ icon } alt="" />
-	</div>
-);
-
-export default useStripeLinkPreview;
