@@ -1,12 +1,0 @@
-.stripe-link-preview {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	background-color: #00d66f;
-	border-radius: 5px;
-	height: 40px;
-	&:hover {
-		cursor: pointer;
-		filter: opacity(0.7);
-	}
-}
