@@ -1,6 +1,6 @@
 import React from 'react';
 import IconWithShell from '../styles/icon-with-shell';
-import icon from './icon.svg';
+import icon from './icon-black.svg';
 
 const ApplePayIcon = ( props ) => <IconWithShell { ...props } src={ icon } />;
 
